syntax = "proto2";
message Test
{
	optional int32 i = 1;
	optional bytes b = 2;
}

message Test1
{
	optional Test t = 1[lazy = true];
}